rakuten/enforce-https-services/.chainsaw-test/service-good.yaml
apiVersion: v1
kind: Service
metadata:
  name: https-service
spec:
  selector:
    app: my-app
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: tcp-service
spec:
  selector:
    app: my-app
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
